--- a/src/sidepanel/layout/css/tooltip.css
+++ b/src/sidepanel/layout/css/tooltip.css
@@ -9,7 +9,7 @@
   > div {
     border: none;
     padding: 1rem;
-    background-color: rgb(211, 55, 55);
+    background-color: #52b83f;
     position: relative;
     width: 100%;
     img{
